[package]
name = "linelogger"
version = "0.1.0"
authors = ["devfans <stefanliu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.4"
tokio-net = { version = "=0.2.0-alpha.4", features = ["process"] }
futures-preview = "=0.3.0-alpha.18"
futures-core-preview = "=0.3.0-alpha.18"
futures-sink-preview = "=0.3.0-alpha.18"
futures-util-preview = { version = "=0.3.0-alpha.18", features = ["sink"] }

